Update paper list

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1705,9 +1705,88 @@
   abbr={IEEE-RAL},
   volume={10},
   preview={tsush2.gif},
+  html={https://ieeexplore.ieee.org/abstract/document/10844355},
   number={3},
   bibtex_show={true},
   pages={2383-2390},
   google_scholar_id={kz9GbA2Ns4gC},
   keywords={Robots;Production facilities;Codes;Service robots;Robot kinematics;Planning;Automobiles;Safety;Fasteners;Chatbots;Large language models;language-based planning;task planning;autonomous mobile robot;human robot interaction},
   doi={10.1109/LRA.2025.3531153}}
+
+  @article{gutierrez2025real,
+  title={Real-Time Geometric-Registration-Based Precision Localization for Autonomous Docking in Unstructured Factory Environment},
+  author={Gutierrez, Sebastian Fernando Chinchilla and Watanabe, Manaru and Ooyama, Masahiro and Yamada, Takayuki and Yamada, Tomoaki and Toshiki, Naoto and Yamane, Satsuki and Luces, Jose Victorio Salazar and Ravankar, Ankit A and Hirata, Yasuhisa},
+  journal={IEEE Robotics and Automation Letters},
+  year={2025},
+  abbr={IEEE-RAL},
+  bibtex_show={true},
+  html={https://ieeexplore.ieee.org/abstract/document/11020725},
+  preview={chinc1-3575646-large.gif},
+  doi={10.1109/LRA.2025.3575646},
+  google_scholar_id={HbR8gkJAVGIC},
+  publisher={IEEE}
+}
+
+@article{ravankar2025development,
+  title={Development of a brain--machine interface based robot navigation system for disabled people},
+  author={Ravankar, Abhijeet and Ravankar, Ankit A and Rawankar, Arpit},
+  journal={Artificial Life and Robotics},
+  pages={1--9},
+  year={2025},
+  abbr={AROB},
+  bibtex_show={true},
+  html={https://link.springer.com/article/10.1007/s10015-025-01024-2},
+  preview={10015_2025_1024_Fig6_HTML.gif},
+  doi={10.1007/s10015-025-01024-2},
+  google_scholar_id={xtoqd-5pKcoC},
+  publisher={Springer}
+}
+
+@article{ravankar2025target,
+  title={Target specific multi-image 3D scrambling algorithm for security cameras},
+  author={Ravankar, Abhijeet and Rawankar, Arpit and Ravankar, Ankit A},
+  journal={Artificial Life and Robotics},
+  pages={1--11},
+  year={2025},
+  abbr={AROB},
+  bibtex_show={true},
+  html={https://link.springer.com/article/10.1007/s10015-025-01033-1},
+  preview={10015_2025_1033_Fig6_HTML.gif},
+  doi={10.1007/s10015-025-01033-1},
+  google_scholar_id={Ri6SYOTghG4C},
+  publisher={Springer}
+}
+
+@inproceedings{luces2025vibrotactile,
+  title={Vibrotactile Feedback for Training Tempo and Stroke Length in Golf Putting},
+  author={Luces, Jose Victorio Salazar and Ravankar, Ankit and Hirata, Yasuhisa},
+  booktitle={2025 IEEE/SICE International Symposium on System Integration (SII)},
+  pages={127--133},
+  year={2025},
+  bibtex_show={true},
+  abbr={SII},
+  google_scholar_id={WZBGuue-350C},
+  organization={IEEE}
+}
+
+@inproceedings{chikhalikar2025open,
+  title={Open Vocabulary Object Search Utilizing Large Language Models and Fuzzy Inferencing},
+  author={Chikhalikar, Akash and Ravankar, Ankit A and Luces, Jose Victorio Salazar and Hirata, Yasuhisa},
+  booktitle={2025 IEEE/SICE International Symposium on System Integration (SII)},
+  pages={345--351},
+  year={2025},
+  bibtex_show={true},
+  abbr={SII},
+  google_scholar_id={oNZyr7d5Mn4C},
+  organization={IEEE}
+}
+
+@inproceedings{manriquez2025somnomat,
+  title={Somnomat Care: A Novel Robotic Bed for Vestibular Stimulation in Nursing Homes},
+  author={Manr{\'\i}quez-Cisterna, Ricardo and Gnarra, Oriella and Ravankar, Ankit A and Breuss, Alexander and Yoshimi, Tatsuya and Salazar Luces, Jose Victorio and Paez-Granados, Diego and Kato, Kenji and Riener, Robert and Hirata, Yasuhisa},
+  booktitle={19th IEEE/RAS-EMBS International Conference on Rehabilitation Robotics (ICORR 2025)},
+  google_scholar_id={foquWX3nUaYC},
+   bibtex_show={true},
+  abbr={ICORR},
+  year={2025}
+}
