--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1790,3 +1790,15 @@
   abbr={ICORR},
   year={2025}
 }
+
+@inproceedings{dong2024development,
+  title={Development of a Detachable Body Weight Support Robotic Rollator with Wearable Sensors to Assist Overground Gait Rehabilitation},
+  author={Dong, Zonghao and Luces, Jose Victorio Salazar and Ravankar, Ankit A and Liao, Zhenyu and Hirata, Yasuhisa},
+  booktitle={International Conference on NeuroRehabilitation},
+  pages={519--523},
+  year={2024},
+  bibtex_show={true},
+  google_scholar_id={PoWvk5oyLR8C},
+  abbr={ICNR},
+  organization={Springer}
+}
